# IntelIntrinsics

./: .gitignore  Intrinsics.sln  LICENSE  cpp-faq.md  readme.md
CppDemo/: CMakeLists.txt  CppDemo.cpp  CppDemo.vcxproj  CppDemo.vcxproj.filters  QuaternionPort.hpp  ReadMe.txt  brightness.cpp  brightness.h  brightness.inl  cmake_install.cmake  compare.cpp  compare.h  compare.inl  intDivide.cpp  intDivide.h  intDivide.inl  quaternionMul.cpp  quaternionMul.h  stdafx.cpp  stdafx.h
CppDemo/IDiv/: DivImpl.inl  DivMagic.hpp  IDiv.hpp
CppDemo/Intrinsics/: aes.hpp  avx.hpp  avx2.hpp  avx2_operators.hpp  avx_operators.hpp  bmi1.hpp  bmi2.hpp  fma.hpp  fp16c.hpp  intrinsics.hpp  pclmulqdq.hpp  sha.hpp  sse.hpp  sse2.hpp  sse3.hpp  sse4.1.hpp  sse4.2.hpp  sse_operators.hpp  ssse3.hpp
CppDemo/Intrinsics/Extra/: avx-extra.hpp  avx2-extra.hpp  common.hpp  sse-extra.hpp  sse2-extra.hpp  sse4.2-extra.hpp
CppDemo/Intrinsics/Implementation/: operators_float.inl  operators_float64.inl  operators_float_impl.inl  utils.hpp
Intrinsics/: DataSource.cs  IntrinsicsDocs.csproj  Program.cs  Utils.cs  packages.config
Intrinsics/Cpp/: CppBuilder.cs  CppWriter.cs  ExtraCode.cs  ExtraCodeGen.cs  ExtraCodeParser.cs  Filters.cs  HeaderFile.cs  TypeMapping.cs  avx.extra.hpp  avx2.extra.hpp  avx2_operators.hpp  avx_operators.hpp  fp16c.extra.hpp  fp16c.hpp  operators_float.inl  operators_float_impl.inl  operators_int.inl  sse.extra.hpp  sse2.extra.hpp  sse2_operators.hpp  sse_operators.hpp
Intrinsics/Html/: group.cshtml  groupList.cshtml  index.cshtml  intrinsic.cshtml  intrinsics.css
Intrinsics/Parse/: DataSet.cs  IntelPerfData.cs  Intrinsic.cs
Intrinsics/Performance/: ArgTypes.cs  FilterRamEntries.cs  PerfData.cs  RegSizes.cs  TableBuilder.cs  Unpack.cs  UnpackUtils.cs
Intrinsics/Process/: Group.cs  GroupList.cs  UniqueID.cs
Intrinsics/Properties/: AssemblyInfo.cs
ParseTables/: InstructionsData.cs  ParseTables.csproj  Program.cs  TablesParser.cs
(+26 files in other folders)
